--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-28 (4.0.28.55-0.2.0.1-1) noble; urgency=medium
+
+  * General improvements and bug fixes
+
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Thu, 12 Feb 2026 20:20:31 +0300
+
 nitrocid-28 (4.0.28.55-0.2.0.0-1) noble; urgency=medium
 
   * New generation of Nitrocid! It contains a huge amount of changes!
