--- a/CHANGES
+++ b/CHANGES
@@ -1,12 +1,9 @@
-This is the sixth service pack release of Nitrocid 0.1.0 that integrates all features from 0.1.2 as we sunset it!
+This is the release of an urgent fix intended to sort out Nettify.
 
 ### Changes
 
 This release contains a variety of changes, including, but not limited to:
 
-- `[+]` Integrated all features from 0.1.2
-- `[*]` Fixed homepage crash when exiting from some apps
-- `[*]` Fixed SSH encoding issues
 - `[*]` General improvements
 
 Review the commit history if you want to get a deep insight about the changes.
