--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-25 (3.0.25.585-0.1.0.69-1) noble; urgency=medium
+
+  * General improvements and bug fixes
+
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Sat, 14 Feb 2026 16:44:39 +0300
+
 nitrocid-25 (3.0.25.585-0.1.0.68-1) noble; urgency=medium
 
   * General improvements and bug fixes
