dev - Started development of 0.2.0.2
---

Type: dev
Breaking: No
Doc Required: No
Backport Required: No
AI Assisted: No
Part: 1/1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-28 (4.0.28.56-0.2.0.2-1) noble; urgency=medium
+
+  * General improvements and bug fixes
+
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Sat, 14 Feb 2026 16:44:52 +0300
+
 nitrocid-28 (4.0.28.56-0.2.0.1-1) noble; urgency=medium
 
   * General improvements and bug fixes
